--- a/CPP Module 01/ex02/Makefile
+++ b/CPP Module 01/ex02/Makefile
@@ -3,10 +3,7 @@ CFLAGS		=	-Wall -Wextra -Werror -std=c++98
 RM			=	/bin/rm -f
 NAME		=	Zombie
 
-SRCS		=	Zombie.cpp \
-				Main.cpp \
-				randomChump.cpp \
-				newZombie.cpp \
+SRCS		=	Main.cpp \
 
 OBJS		=	$(SRCS:.cpp=.o)
 
