--- a/CPP_Module_02/ex01/Makefile
+++ b/CPP_Module_02/ex01/Makefile
@@ -1,19 +1,20 @@
 CC			=	c++
-CCFLAGS		=	-Wall -Wextra -Werror -std=c++98
+CFLAGS		=	-Wall -Wextra -Werror -std=c++98
 RM			=	rm -f
-NAME		=	PhoneBook
+NAME		=	Fixed
 
-SRCS		=	Contact.cpp PhoneBook.cpp Main.cpp
+SRCS		=	Main.cpp \
+				Fixed.cpp \
 
 OBJS		=	$(SRCS:%.cpp=%.o)
 
 all:	$(NAME)
 
-$(NAME): $(OBJS)
-		$(CC) $(CCFLAGS) $(OBJS) -o $(NAME)
-
 %.o: %.cpp
 	$(CC) $(CCFLAGS) -c $< -o $@
+
+$(NAME): $(OBJS)
+		$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
 
 clean:
 		$(RM) $(OBJS)
