--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,24 @@
 		"thread": "cpp",
 		"typeindex": "cpp",
 		"valarray": "cpp",
-		"variant": "cpp"
+		"variant": "cpp",
+		"__bit_reference": "cpp",
+		"__bits": "cpp",
+		"__config": "cpp",
+		"__debug": "cpp",
+		"__errc": "cpp",
+		"__hash_table": "cpp",
+		"__locale": "cpp",
+		"__mutex_base": "cpp",
+		"__node_handle": "cpp",
+		"__split_buffer": "cpp",
+		"__threading_support": "cpp",
+		"__tuple": "cpp",
+		"__verbose_abort": "cpp",
+		"ios": "cpp",
+		"locale": "cpp",
+		"stack": "cpp",
+		"__nullptr": "cpp",
+		"__string": "cpp"
 	}
 }
