--- a/CPP_Module_01/ex02/Makefile
+++ b/CPP_Module_01/ex02/Makefile
@@ -9,8 +9,11 @@ OBJS		=	$(SRCS:.cpp=.o)
 
 all:	$(NAME)
 
-$(NAME): $(OBJS)
+$(NAME):
 		$(CC) $(CFLAGS) $(SRCS) -o $(NAME)
+
+%.o: %.cpp
+	$(CC) $(CCFLAGS) -c $< -o $@
 
 clean:
 		$(RM) $(OBJS)
