--- a/CPP_Module_03/ex01/Makefile
+++ b/CPP_Module_03/ex01/Makefile
@@ -1,11 +1,11 @@
 CC			=	c++
 CFLAGS		=	-Wall -Wextra -Werror -std=c++98
 RM			=	/bin/rm -f
-NAME		=	ClapTrap
+NAME		=	ScavTrap
 
 SRCS		=	Main.cpp \
 				ClapTrap.cpp \
-				
+				ScavTrap.cpp 
 
 OBJS		=	$(SRCS:.cpp=.o)
 
