--- a/CPP_Module_03/ex02/Makefile
+++ b/CPP_Module_03/ex02/Makefile
@@ -1,11 +1,12 @@
 CC			=	c++
 CFLAGS		=	-Wall -Wextra -Werror -std=c++98
 RM			=	/bin/rm -f
-NAME		=	ScavTrap
+NAME		=	FragTrap
 
 SRCS		=	Main.cpp \
 				ClapTrap.cpp \
-				ScavTrap.cpp 
+				ScavTrap.cpp \
+				FragTrap.cpp
 
 OBJS		=	$(SRCS:.cpp=.o)
 
