--- a/CPP_Module_04/ex00/Makefile
+++ b/CPP_Module_04/ex00/Makefile
@@ -7,6 +7,8 @@ SRCS		=	Main.cpp \
 				Animal.cpp \
 				Cat.cpp \
 				Dog.cpp \
+				WrongCat.cpp \
+				WrongAnimal.cpp
 
 OBJS		=	$(SRCS:.cpp=.o)
 
