--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -98,7 +98,8 @@
     "locale": "cpp",
     "stack": "cpp",
     "__nullptr": "cpp",
-    "__string": "cpp"
+    "__string": "cpp",
+    "__tree": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
